default/objects/Lease_Abstract__c/Lease_Abstract__c.object-meta.xml
<CustomObject>
    <description>Used to store the lease abstract tied to the the Due Dillegence Package</description>
    <label>Lease Abstract</label>
    <nameField>
        <label>Lease Abstract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Abstracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>