default/objects/Lease_Abstract__c/fields/Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divestiture Site</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Lease Abstracts</relationshipLabel>
    <relationshipName>Lease_Abstracts</relationshipName>
    <type>Lookup</type>
</CustomField>