default/objects/Lease_Abstract__c/fields/Does_T_Mobile_have_a_genrator__c.field-meta.xml
<CustomField>
    <fullName>Does_T_Mobile_have_a_genrator__c</fullName>
    <label>Does T-Mobile have a genrator?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>