default/objects/Lease_Abstract__c/fields/Freely_Transferable__c.field-meta.xml
<CustomField>
    <fullName>Freely_Transferable__c</fullName>
    <label>Freely Transferable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>