default/objects/Lease_Abstract__c/fields/Landlord_Email__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Email__c</fullName>
    <label>Landlord Email</label>
    <type>Email</type>
</CustomField>