default/objects/Lease_Abstract__c/fields/Landlord_ID__c.field-meta.xml
<CustomField>
    <fullName>Landlord_ID__c</fullName>
    <label>Landlord ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>