default/objects/Lease_Abstract__c/fields/Landlord_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Site_ID__c</fullName>
    <label>Landlord Site ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>