default/objects/Lease_Abstract__c/fields/Landlord_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Zip_Code__c</fullName>
    <label>Landlord Zip Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>