default/objects/Lease_Abstract__c/fields/Lease_Name__c.field-meta.xml
<CustomField>
    <fullName>Lease_Name__c</fullName>
    <label>Lease Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>