default/objects/Lease_Abstract__c/fields/Lease_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Negotiation</label>
    <referenceTo>Lease_Negotiation__c</referenceTo>
    <relationshipLabel>Lease Abstracts</relationshipLabel>
    <relationshipName>Lease_Abstracts</relationshipName>
    <type>Lookup</type>
</CustomField>