default/objects/Lease_Abstract__c/fields/MLA_ID__c.field-meta.xml
<CustomField>
    <fullName>MLA_ID__c</fullName>
    <label>MLA ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>