default/objects/Lease_Abstract__c/fields/Notice_to_Proceed__c.field-meta.xml
<CustomField>
    <fullName>Notice_to_Proceed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notice to Proceed</label>
    <referenceTo>Notice_to_Proceed__c</referenceTo>
    <relationshipLabel>Lease Abstracts</relationshipLabel>
    <relationshipName>Lease_Abstracts</relationshipName>
    <type>Lookup</type>
</CustomField>