default/objects/Lease_Abstract__c/fields/Site_Decommission__c.field-meta.xml
<CustomField>
    <fullName>Site_Decommission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Decommission</label>
    <referenceTo>Site_Decommission__c</referenceTo>
    <relationshipLabel>Lease Abstracts</relationshipLabel>
    <relationshipName>Lease_Abstracts</relationshipName>
    <type>Lookup</type>
</CustomField>