default/objects/Lease_Abstract__c/fields/Square_Feet_of_Ground_Lease__c.field-meta.xml
<CustomField>
    <fullName>Square_Feet_of_Ground_Lease__c</fullName>
    <inlineHelpText>If applicable</inlineHelpText>
    <label>Square Feet of Ground Lease</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>