default/objects/Lease_Abstract__c/fields/T_Mo_Unf_Termination_Doc_Section__c.field-meta.xml
<CustomField>
    <fullName>T_Mo_Unf_Termination_Doc_Section__c</fullName>
    <label>T-Mo Unf.Termination Doc Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>