default/objects/Lease_Abstract__c/fields/T_Mo_Unfet_Modification_Right_Doc__c.field-meta.xml
<CustomField>
    <fullName>T_Mo_Unfet_Modification_Right_Doc__c</fullName>
    <label>T Mo Unfet Modification Right Doc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>