default/objects/Lease_Abstract__c/fields/Unrestricted_24_7_Access_Rights__c.field-meta.xml
<CustomField>
    <fullName>Unrestricted_24_7_Access_Rights__c</fullName>
    <label>Unrestricted 24/7 Access Rights</label>
    <length>32</length>
    <type>Text</type>
</CustomField>