default/objects/Lease_Abstract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Lease_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Divestiture_Site__c</columns>
    <columns>Current_Monthly_Rent__c</columns>
    <columns>Lease_Landlord__c</columns>
    <columns>Lease_Name__c</columns>
    <columns>Lease_Status__c</columns>
    <columns>Lease_Term_End_Date__c</columns>
    <columns>Lease_Use__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>