default/objects/Lease_Abstract__c/listViews/T_Mobile_Deconstruction_Team_Leadership_Lease_Abstract.listView-meta.xml
<ListView>
    <fullName>T_Mobile_Deconstruction_Team_Leadership_Lease_Abstract</fullName>
    <filterScope>Queue</filterScope>
    <label>T-Mobile Deconstruction Team Leadership</label>
    <queue>T_Mobile_Deconstruction_Team_Leadership</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>