default/objects/Lease_Abstract__c/listViews/T_Mobile_Leasing_Team_Lease_Abstract.listView-meta.xml
<ListView>
    <fullName>T_Mobile_Leasing_Team_Lease_Abstract</fullName>
    <filterScope>Queue</filterScope>
    <label>T-Mobile Leasing Team</label>
    <queue>T_Mobile_Leasing_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>